대시보드 구현중

--- a/Hobee/src/main/webapp/resources/css/member/editlnfo.css
+++ b/Hobee/src/main/webapp/resources/css/member/editlnfo.css
@@ -22,7 +22,7 @@ body {
    =============================== */
 main {
   margin-left: 240px;
-  padding: 30px;
+  padding: 30px 30px 60px 30px;
 /*   padding-top: 100px; 헤더 아래부터 시작 */
   min-height: 100vh;
   background-color: #f8f9fa;
