--- a/Hobee/src/main/webapp/resources/css/community/communityDetail.css
+++ b/Hobee/src/main/webapp/resources/css/community/communityDetail.css
@@ -16,7 +16,9 @@ body {
     color: #222;
     min-height: 100vh;
 }
-
+main{
+	padding-bottom:30px;
+}
 /* =========================================================
    DETAIL MASTER LAYOUT (1100px 7:3)
 ========================================================= */
