부분환불 상태 앞단 구현

--- a/Hobee/src/main/webapp/resources/css/member/paymentList.css
+++ b/Hobee/src/main/webapp/resources/css/member/paymentList.css
@@ -109,6 +109,11 @@ body {
     font-weight: 700;
 }
 
+.status-partial {
+    color: #2563eb;
+    font-weight: 700;
+}
+
 .status-etc {
     color: #999;
 }
