결제 process 오류 수정  및 강의상세페이지 결제 연결// 커뮤니티 css 수정

--- a/Hobee/src/main/webapp/resources/css/community/communityDetail.css
+++ b/Hobee/src/main/webapp/resources/css/community/communityDetail.css
@@ -26,7 +26,7 @@ main{
 
 
 .detail-layout {
-    max-width: 1100px;
+    width: 1100px;
     margin: 0 auto;
      display: flex;
     align-items: flex-start;
