css 다른페이지랑 맞추는중

--- a/Hobee/src/main/webapp/resources/css/admin/MemberManagement.css
+++ b/Hobee/src/main/webapp/resources/css/admin/MemberManagement.css
@@ -81,7 +81,8 @@ body {
 	
 /* =========================== 컨텐츠 래퍼 =========================== */
 .content-wrapper {
-    max-width: 1200px;
+    max-width: 1400px;
+    min-width: 1400px;
     margin: 0 auto;
 }
 
