--- a/Hobee/src/main/webapp/resources/css/admin/dashboard.css
+++ b/Hobee/src/main/webapp/resources/css/admin/dashboard.css
@@ -40,11 +40,10 @@ html {
 /* ⭐ body는 padding 없이 */
 body {
     margin: 0;
-    font-family: Nunito, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #858796;
     text-align: left;
     background-color: #f8f9fc;
     height: 100%;
@@ -411,8 +410,8 @@ a:hover {
 
 /* ⭐⭐⭐ 핵심: Wrapper 레이아웃 - 본문만 이동 ⭐⭐⭐ */
 #wrapper {
-    margin-top: 35px;
     margin-left: 240px;
+    margin-top: 0;
     min-height: calc(100vh - 81px);
 }
 
@@ -427,9 +426,14 @@ a:hover {
 }
 
 .container-fluid {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding: 30px 10px;
     width: calc(100% - 240px);
+    box-sizing: border-box;
+}
+
+.box {
+    background-color: #f9fafb;
+    min-height: 100vh;
 }
 
 /* Progress Bar */
@@ -645,6 +649,5 @@ a:hover {
 }
 
 .contentRow{
-	margin-bottom: 20px;
+    margin-bottom: 20px;
 }
-
